# OrionFusion-Cmake

MelodyV2-main/: CMakeLists.txt  CMakeSettings.json
MelodyV2-main/MelodyV2/: CMakeLists.txt  dllmain.cpp
MelodyV2-main/MelodyV2/Client/: CMakelists.txt  Client.cpp  Client.h
MelodyV2-main/MelodyV2/Client/CommandManager/: CMakelists.txt  CommandManager.cpp  CommandManager.h
MelodyV2-main/MelodyV2/Client/CommandManager/Commands/: CMakelists.txt  Command.h  FriendCommand.cpp  FriendCommand.h
MelodyV2-main/MelodyV2/Client/ConfigManager/: CMakelists.txt  ConfigManager.cpp  ConfigManager.h
MelodyV2-main/MelodyV2/Client/HookManager/: CMakelists.txt  HookManager.cpp  HooksManager.h
MelodyV2-main/MelodyV2/Client/HookManager/Hooks/: CMakelists.txt
MelodyV2-main/MelodyV2/Client/HookManager/Hooks/Actor/: ActorGetBodyYawHook.cpp  ActorGetBodyYawHook.h  ActorGetHeadRotHook.cpp  ActorGetHeadRotHook.h  ActorIsOnFireHook.cpp  ActorIsOnFireHook.h  ActorLerpMotionHook.cpp  ActorLerpMotionHook.h  ActorNormalTickHook.cpp  ActorNormalTickHook.h  ActorShouldRenderHook.cpp  ActorShouldRenderHook.h  ActorSwingHook.cpp  ActorSwingHook.h  CMakelists.txt
MelodyV2-main/MelodyV2/Client/HookManager/Hooks/DirectX/: CMakelists.txt  DirectXHook.cpp  DirectXHook.h
MelodyV2-main/MelodyV2/Client/HookManager/Hooks/GameMode/: CMakelists.txt  GameModeGetPickRangeHook.cpp  GameModeGetPickRangeHook.h  GameModeStartDestroyBlockHook.cpp  GameModeStartDestroyBlockHook.h  GameModeStopDestroyBlockHook.cpp  GameModeStopDestroyBlockHook.h
MelodyV2-main/MelodyV2/Client/HookManager/Hooks/Key/: CMakelists.txt  KeyMapHook.cpp  KeyMapHook.h  KeyMouseHook.cpp  KeyMouseHook.h
MelodyV2-main/MelodyV2/Client/HookManager/Hooks/MinecraftUIRenderContext/: CMakelists.txt  DrawImageHook.cpp  DrawImageHook.h  DrawTextHook.cpp  DrawTextHook.h
MelodyV2-main/MelodyV2/Client/HookManager/Hooks/Mob/: CMakelists.txt  GetCurrentSwingDurationHook.cpp  GetCurrentSwingDurationHook.h
MelodyV2-main/MelodyV2/Client/HookManager/Hooks/Others/: CMakelists.txt  CauseHurtHook.cpp  CauseHurtHook.h  FontDrawTransformedHook.cpp  FontDrawTransformedHook.h  GetCameraModeHook.cpp  GetCameraModeHook.h  GetFovHook.cpp  GetFovHook.h  GetGammaHook.cpp  GetGammaHook.h  HIDControllerHook.cpp  HIDControllerHook.h  HurtColorHook.cpp  HurtColorHook.h  ItemUseSlowdownHook.cpp  ItemUseSlowdownHook.h  RenderLevelHook.cpp  RenderLevelHook.h  SendPacketHook.cpp  SendPacketHook.h  ServerTickBlockBreakingHook.cpp  ServerTickBlockBreakingHook.h  onContainerScreenControllerTickEventhook.cpp  onContainerScreenControllerTickEventhook.h
MelodyV2-main/MelodyV2/Client/HookManager/Hooks/ScreenView/: CMakeLists.txt  SetUpAndRenderHook.cpp  SetUpAndRenderHook.h
MelodyV2-main/MelodyV2/Client/ModuleManager/: CMakelists.txt  ModuleManager.cpp  ModuleManager.h
MelodyV2-main/MelodyV2/Client/ModuleManager/Modules/: CMakelists.txt  Module.cpp  Module.h
MelodyV2-main/MelodyV2/Client/ModuleManager/Modules/Client/: ArrayList.cpp  ArrayList.h  CMakelists.txt  ClickGui.cpp  ClickGui.h  Colors.cpp  Colors.h  CustomFont.cpp  CustomFont.h  HUD.cpp  HUD.h  Notifications.cpp  Notifications.h
MelodyV2-main/MelodyV2/Client/ModuleManager/Modules/Combat/: AutoAnvil.cpp  AutoAnvil.h  Autocrystal.cpp  Autocrystal.h  CMakelists.txt  Killaura.cpp  Killaura.h  Reach.cpp  Reach.h
MelodyV2-main/MelodyV2/Client/ModuleManager/Modules/Misc/: Anticrystal.cpp  Anticrystal.h  CMakelists.txt  Disabler.cpp  Disabler.h  NoPacket.cpp  NoPacket.h  Timer.cpp  Timer.h
MelodyV2-main/MelodyV2/Client/ModuleManager/Modules/Movement/: AutoSprint.cpp  AutoSprint.h  CMakelists.txt  Clip.cpp  Clip.h  ElytraFly.cpp  ElytraFly.h  Fly.cpp  Fly.h  Phase.cpp  Phase.h  Velocity.cpp  Velocity.h
MelodyV2-main/MelodyV2/Client/ModuleManager/Modules/Player/: AntiAnvil.cpp  AntiAnvil.h  AutoEat.cpp  AutoEat.h  AutoOffhand.cpp  AutoOffhand.h  BlockReach.cpp  BlockReach.h  CMakelists.txt  ChestStealler.cpp  ChestStealler.h  FastEat.cpp  FastEat.h  PacketMine.cpp  PacketMine.h  Scaffold.cpp  Scaffold.h  Surround.cpp  Surround.h  Swing.cpp  Swing.h
MelodyV2-main/MelodyV2/Libs/: CMakelists.txt
MelodyV2-main/MelodyV2/Libs/Fonts/: CMakelists.txt  Mojangles.cpp  NotoSans.cpp  ProductSansLight.cpp  ProductSansRegular.cpp  TahomaRegular.cpp  Verdana.cpp  fonts.h
MelodyV2-main/MelodyV2/Libs/ImFX/: CMakelists.txt  imfx.cpp  imfx.h
MelodyV2-main/MelodyV2/Libs/ImGui/: CMakelists.txt  imgui_impl_win32.cpp  imgui_impl_win32.h
MelodyV2-main/MelodyV2/SDK/: CMakelists.txt  GameData.cpp  GameData.h  MCTextFormat.cpp  MCTextFormat.h  Signatures.cpp  Signatures.h
MelodyV2-main/MelodyV2/SDK/Classes/: Actor.h  ActorUniqueID.h  Block.h  BlockLegacy.h  BlockSource.h  CMakelists.txt  CaretMeasureData.h  ClientInstance.h  ComplexInventoryTransaction.h  Container.h  ContainerScreenController.h  ContainerScreenControllerEvent.h  ContainerScreenControllerTickEventContainerScreenControllerTickEvent.h  Dimension.h  EnityContext.h  Enityregistry.h  Entityid.h  FontBitmap.h  GameMode.cpp  GameMode.h  GuiData.h  HashedString.h  IContainerManager.h  Inventory.h  InventoryAction.h  InventorySource.h  InventoryTransactionManager.h  Item.h  ItemStack.h  ItemStackBase.h  Level.h  LevelRenderer.h  LevelRendererPlayer.h  LocalPlayer.h  LoopbackPacketSender.h  Material.h  MaterialPtr.h  Minecraft.h  MinecraftGame.h  MinecraftPacket.h  (+23 more)
MelodyV2-main/MelodyV2/SDK/Components/: AABBShapeComponent.h  ActorRotationComponent.h  ActorTypeComponent.h  CMakelists.txt  Componemts.cpp  FallDistanceComponent.h  MobEffectsComponent.h  RenderPositionComponent.h  RuntimeIDComponent.h  StateVectorComponent.h
MelodyV2-main/MelodyV2/SDK/Components/Flags/: CMakelists.txt  Flagcominemts.h  OnGroundFlag.cpp  OnGroundFlag.h  jupmfromgroungflas.h
MelodyV2-main/MelodyV2/Utils/: CMakelists.txt  ColorUtils.h  ImGuiUtils.cpp  ImGuiUtils.h  Math.h  MemoryUtils.h  RenderUtils.cpp  RenderUtils.h  TargetUtils.cpp  TargetUtils.h  Utils.h
MelodyV2-main/Shared/: CMakelists.txt  xorstr.hpp
MelodyV2-main/Shared/Utils/: CMakeLists.txt  Utils.cpp  Utils.h  base64.cpp  base64.h
(+23 files in other folders)
